# google-saved-list-scraper

./: .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  todo-to-issue.yml
src/gmaps_scraper/: __init__.py  __main__.py  cli.py  debug_dump.py  models.py  parser.py  place_scraper.py  scraper.py  url_tools.py
src/google_saved_lists/: cli.py  debug_dump.py  models.py  parser.py  scraper.py
tests/: test_cli.py  test_debug_dump.py  test_parser.py  test_place_scraper.py  test_public_api.py  test_scraper.py  test_url_tools.py
