[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmaps-scraper"
version = "0.1.0"
description = "Extract data from Google Maps saved lists and place pages."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14,<3.15"
dependencies = [
  "cloakbrowser",
  "curl-cffi>=0.15.0",
]

[project.scripts]
gmaps-scraper = "gmaps_scraper.cli:main"

[dependency-groups]
dev = [
  "mypy",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gmaps_scraper"]

[tool.mypy]
files = ["src"]
python_version = "3.14"
strict = true

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["gmaps_scraper"]
